# wanix

./: CMakeLists.txt  MakeFile  README.md  boch.config  bochng.config
boot/: boot.asm  head.asm  setup.asm
include/: common.h  stdarg.h  stdio.h  stdlib.h  string.h  unistd.h
include/asm/: io.h  system.h
include/wanux/: header.h  kernel.h  memory.h  traps.h  tty.h  types.h
init/: main.c
kernel/: gdt.c  idt.c  kernel.c  printfk.c  printk.c  traps.c  vfprintf.c
kernel/asm/: README.MD  clock_interrupt_handler.asm  interrupt_handler.asm  io.asm
kernel/chr_drv/: clock.c  console.c  easy_keybord.c
lib/: error.c  stdio.c  stdlib.c  string.c  unistd.c  write.c
mm/: memory.c  mm_101012.c
